RB-690: Fix goal descrpition being overlapped by reset button

--- a/public/chirpy.css
+++ b/public/chirpy.css
@@ -153,7 +153,7 @@ a {
     padding: 10px 20px;
     font-size: 18px;
     color: rgba(0,0,0,0.65);
-    height: 45px;
+    min-height: 45px;
 }
 
 #resetButton {
@@ -164,4 +164,5 @@ a {
 
 #headerInner {
     opacity: 0;
+    margin-right: 50px;
 }
